Fixed footer overflow

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -16,7 +16,7 @@
 
     .logo__links {
         display: flex;
-        overflow: auto;
+/*         overflow: auto; */
     }
     
     .links {
