--- a/src/styles/sitewide.scss
+++ b/src/styles/sitewide.scss
@@ -175,7 +175,7 @@ p {
 }
 
 
-.home-page,
+
  .profile{
     overflow: hidden;
 }
